# testnh

./: AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  README.md  buildBin.sh  testnh.spec
TestNH/: CMakeLists.txt  ChiClustering.cpp  ChiClustering.h  ClustNH.cpp  MapNH.cpp  MultinomialClustering.cpp  MultinomialClustering.h  PartNH.cpp  RandNH.cpp  StepNH.cpp  TestNH.cpp  bppTools.cpp
debian/: changelog  control  copyright  rules  testnh.info  testnh.manpages
doc/: CMakeLists.txt  testnh.texi
docs/: index.md
examples/: Life_Alignment.mase  MapNH.bpp  PartNH.bpp
examples/Life_Alignment/: Analysis.R  ClustNH.bpp  HOWTO  Life_Alignment.cluster_equilibrium_free.dnd  Life_Alignment.cluster_equilibrium_free_post.dnd  Life_Alignment.cluster_equilibrium_join.dnd  Life_Alignment.cluster_equilibrium_join_post.dnd  Life_Alignment.cluster_free.dnd  Life_Alignment.cluster_join.dnd  Life_Alignment.counts_post1.dnd  Life_Alignment.counts_post2.dnd  Life_Alignment.dnd  Life_Alignment.free_AIC.message  Life_Alignment.free_AIC.message1  Life_Alignment.free_AIC.message10  Life_Alignment.free_AIC.message11  Life_Alignment.free_AIC.message12  Life_Alignment.free_AIC.message13  Life_Alignment.free_AIC.message15  Life_Alignment.free_AIC.message16  Life_Alignment.free_AIC.message17  Life_Alignment.free_AIC.message18  Life_Alignment.free_AIC.message19  Life_Alignment.free_AIC.message2  Life_Alignment.free_AIC.message20  Life_Alignment.free_AIC.message21  Life_Alignment.free_AIC.message22  Life_Alignment.free_AIC.message23  Life_Alignment.free_AIC.message24  Life_Alignment.free_AIC.message25  Life_Alignment.free_AIC.message26  Life_Alignment.free_AIC.message27  Life_Alignment.free_AIC.message28  Life_Alignment.free_AIC.message29  Life_Alignment.free_AIC.message3  Life_Alignment.free_AIC.message30  Life_Alignment.free_AIC.message31  Life_Alignment.free_AIC.message32  Life_Alignment.free_AIC.message33  Life_Alignment.free_AIC.message34  (+570 more)
examples/LysozymeLarge/: ClustNH.bpp  HOWTO  ML.bpp  MapNH.bpp  PartNH.bpp  README.md  TestNH_homogeneous.bpp  lysozymeLarge.mapping.tsv
examples/LysozymeSmall/: Analysis.R  ClustNH.bpp  CountsTree1.dnd  CountsTree2.dnd  HOWTO  ML.bpp  ML_PNAS.bpp  MapNH.bpp  PartNH.bpp  README.md  bppml_h.out  bppml_nh_PNAS.out  clustnh_free.out  clustnh_join.out  codeml.ctl  lysozymeSmall.cluster_free.dnd  lysozymeSmall.cluster_join.dnd  lysozymeSmall.dnd  lysozymeSmall.dnd2  lysozymeSmall.fasta  lysozymeSmall.ml_h.dnd  lysozymeSmall.ml_h.params.bpp  lysozymeSmall.ml_nh_free_AIC.nhx  lysozymeSmall.ml_nh_free_AIC.parameters.csv  lysozymeSmall.ml_nh_free_BIC.nhx  lysozymeSmall.ml_nh_free_BIC.parameters.csv  lysozymeSmall.ml_nh_join_AIC.nhx  lysozymeSmall.ml_nh_join_BIC.nhx  lysozymeSmall.ml_nh_join_BIC.parameters.csv  lysozymeSmall.model_free_AIC.bpp  lysozymeSmall.model_free_AIC.bpp1  lysozymeSmall.model_free_AIC.bpp2  lysozymeSmall.model_free_AIC.bpp3  lysozymeSmall.model_free_AIC.bpp4  lysozymeSmall.model_free_AIC.bpp6  lysozymeSmall.model_free_AIC.bpp7  lysozymeSmall.model_free_AIC.bpp8  lysozymeSmall.model_free_AIC.log.txt  lysozymeSmall.model_free_BIC.bpp  lysozymeSmall.model_free_BIC.bpp1  (+35 more)
examples/MantellidFrogs/: Analysis.R  ClustNH.bpp  HOWTO  ML.bpp  ML_NH_Full.bpp  MantellidDataset.cluster_free_post.dnd  MantellidDataset.cluster_join_post.dnd  MantellidDataset.counts_post1.dnd  MantellidDataset.counts_post2.dnd  MantellidDataset.faln  MantellidDataset.free_AIC.message11  MantellidDataset.free_AIC.message12  MantellidDataset.free_AIC.message13  MantellidDataset.free_AIC.message14  MantellidDataset.free_AIC.message15  MantellidDataset.free_AIC.message16  MantellidDataset.free_AIC.message17  MantellidDataset.free_AIC.message18  MantellidDataset.free_AIC.message19  MantellidDataset.free_AIC.message2  MantellidDataset.free_AIC.message20  MantellidDataset.free_AIC.message4  MantellidDataset.free_AIC.message6  MantellidDataset.free_AIC.message7  MantellidDataset.free_AIC.message9  MantellidDataset.free_AIC.profile  MantellidDataset.free_AIC.profile1  MantellidDataset.free_AIC.profile10  MantellidDataset.free_AIC.profile11  MantellidDataset.free_AIC.profile12  MantellidDataset.free_AIC.profile13  MantellidDataset.free_AIC.profile14  MantellidDataset.free_AIC.profile15  MantellidDataset.free_AIC.profile16  MantellidDataset.free_AIC.profile17  MantellidDataset.free_AIC.profile18  MantellidDataset.free_AIC.profile19  MantellidDataset.free_AIC.profile2  MantellidDataset.free_AIC.profile20  MantellidDataset.free_AIC.profile3  (+243 more)
examples/MitoMammals/: DnDsMappingAnalysis.R  HOWTO  ML.bpp  ML_NH.bpp  MapNH.bpp  PartNH.bpp  README.md  mammals_dn.csv  mammals_ds.csv  mammals_mass_taxo.csv  mammals_mass_taxo_dn_ds.csv  mito_mammals.all.fasta  mito_mammals.all.ml_h.dnd  mito_mammals.all.ml_h.infos  mito_mammals.all.ml_h.messages  mito_mammals.all.ml_h.params.bpp  mito_mammals.all.ml_h.profile  mito_mammals.tree
examples/MitoMammalsCOX1/: LHV.csv  mammals_mass.csv
examples/PalandAndLynchData/: Analysis.R  DnDsMappingAnalysis.R  HOWTO  ML.bpp  ML_NH_1DNDS.bpp  ML_NH_2DNDS.bpp  ML_NH_Full.bpp  MapNH.bpp  PL_dn.csv  PL_dn_ds.csv  PL_ds.csv  PalandAndLynch.cluster_equilibrium_free_post.dnd  PalandAndLynch.cluster_equilibrium_join_post.dnd  PalandAndLynch.cluster_free.dnd  PalandAndLynch.cluster_join.dnd  PalandAndLynch.counts_post1.dnd  PalandAndLynch.counts_post2.dnd  PalandAndLynch28.free_AIC.profile  PalandAndLynch28.free_AIC.profile1  PalandAndLynch28.free_AIC.profile10  PalandAndLynch28.free_AIC.profile11  PalandAndLynch28.free_AIC.profile12  PalandAndLynch28.free_AIC.profile13  PalandAndLynch28.free_AIC.profile14  PalandAndLynch28.free_AIC.profile2  PalandAndLynch28.free_AIC.profile3  PalandAndLynch28.free_AIC.profile4  PalandAndLynch28.free_AIC.profile5  PalandAndLynch28.free_AIC.profile6  PalandAndLynch28.free_AIC.profile7  PalandAndLynch28.free_AIC.profile8  PalandAndLynch28.free_AIC.profile9  PalandAndLynch28.free_BIC.profile  PalandAndLynch28.free_BIC.profile1  PalandAndLynch28.free_BIC.profile10  (+175 more)
man/: CMakeLists.txt  mapnh.1  partnh.1.txt  randnh.1  testnh.1.txt
(+30 files in other folders)
